--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev  -p 8080 --turbopack",
-    "build": "next build",
+    "dev": "prisma generate && next dev  -p 8080 --turbopack",
+    "build": "prisma generate && next build",
     "start": "npde_modules/next/dist/bin/next start",
     "lint": "eslint"
   },
