commit env variablese

--- a/.github/workflows/main_a2bcars.yml
+++ b/.github/workflows/main_a2bcars.yml
@@ -12,6 +12,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      BETTER_AUTH_SECRET: ${{ secrets.BETTER_AUTH_SECRET }}
     permissions:
       contents: read #This is required for actions/checkout
 
