--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "prisma generate && next dev  -p 8080 --turbopack",
     "build": "prisma generate && next build",
-    "start": "node_modules/next/dist/bin/next start",
+    "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
