--- a/.github/workflows/main_a2bcars.yml
+++ b/.github/workflows/main_a2bcars.yml
@@ -31,6 +31,10 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+          # copy assets into standalone
+          cp -r public .next/standalone/
+          mkdir -p .next/standalone/.next
+          cp -r .next/static .next/standalone/.next/
 
       - name: Zip artifact for deployment
         run: zip next.zip ./* .next -qr
