--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev  -p 8080 --turbopack",
-    "build": "prisma generate && next build",
+    "dev": "next dev  -p 8080 --turbopack",
+    "build": "next build",
     "start": "node_modules/next/dist/bin/next start",
     "lint": "eslint"
   },
@@ -13,7 +13,7 @@
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "@radix-ui/react-slot": "^1.2.4",
-    "better-auth": "^1.4.6",
+    "better-auth": "1.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
