--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev  -p 8080 --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "node_modules/next/dist/bin/next start",
     "lint": "eslint"
   },
