--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a2bcars",
-  "version": "0.1.0",
+  "version": "0.1.10",
   "private": true,
   "scripts": {
     "dev": "prisma generate && next dev  -p 8080 --turbopack",
@@ -8,26 +8,28 @@
     "start": "node_modules/next/dist/bin/next start",
     "lint": "eslint"
   },
-  "dependencies": {   
+  "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
-    "@radix-ui/react-slot": "^1.2.4",    
+    "@radix-ui/react-slot": "^1.2.4",
     "better-auth": "1.4.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dompurify": "^3.3.1",    
+    "dompurify": "^3.3.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
-    "pg": "^8.16.3",    
+    "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-quill-new": "^3.7.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
@@ -39,6 +41,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
+    "prettier": "^3.7.4",
     "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
